--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,31 @@
+html body{
+  margin: 0;
+  padding:0
+}
+nav {
+  width: 120px;
+  height:  30px;
+}
+
+ul {
+  margin: 0;
+  padding:0;
+}
+
+#topMenu ul li{
+  list-style: none;
+}
 .menu {
-  background-color: orangered;
-  color: blue;
-  border-radius: 5%;
+  line-height: 30px;
+  display: inline-block;
+  text-decoration: none;
+  width: 100px;
+  vertical-align : middle;
+  text-align: center;
+  background-color: #222;
+  color: #999;
+}
+
+.menu:hover{
+  background-color: red;
 }
